All forms touchup 1

--- a/changepass.html
+++ b/changepass.html
@@ -77,9 +77,13 @@
     <!-- ************form -->
     <div class="outerformcontainer">
       <div class="formcontainer">
-        <h2 class="formheading">Change your password</h2>
+        <h2 class="formheading">Change password</h2>
         <form action="" class="loginform">
          
+          <div class="inputcontainer">
+            <label for="password" class="passwordlabel">Current password</label>
+            <input type="password" name="password" />
+          </div>
           <div class="inputcontainer">
             <label for="password" class="passwordlabel">New password</label>
             <input type="password" name="password" />
@@ -88,7 +92,7 @@
             <label for="password" class="passwordlabel">Confirm password</label>
             <input type="password" name="password" />
           </div>
-          <input type="submit" class="submitbutton" value="Change Password" />
+          <input type="submit" class="submitbutton" value="Change My Password" />
           <!-- <span class="forgotpass"><a href="#">Forgot password?</a></span>
           <span class="formwarning">Incorrect Login Details</span>
           <span class="alreadyhaveacc"><p>Already have an account? <a href="">Sign in</a></p></span> -->
