--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <input type="submit" class="submitbutton" value="Log in" />
           <span class="forgotpass"><a href="#">Forgot password?</a></span>
           <span class="formwarning">Incorrect Login Details</span>
-          <span class="alreadyhaveacc"><p>Already have an account? <a href="">Sign in</a></p></span>
+          <span class="alreadyhaveacc"><p>Don't have an account? <a href="">Sign Up</a></p></span>
         </form>
       </div>
     </div>
