--- a/logout.html
+++ b/logout.html
@@ -77,10 +77,10 @@
     <!-- ************form -->
     <div class="outerformcontainer">
       <div class="formcontainer">
-        <h2 class="formheading">Are you sure you wanna log out?</h2>
+        <h2 class="formheading">Are you sure to log out?</h2>
         <form action="" class="loginform">
           
-          <input type="submit" class="submitbutton" value="Log out" />
+          <input type="submit" class="submitbutton" value="Yes" />
           <!-- <span class="forgotpass"><a href="#">Forgot password?</a></span> -->
           <!-- <span class="formwarning">Incorrect Login Details</span> -->
           <!-- <span class="alreadyhaveacc"><p>Already have an account? <a href="">Sign in</a></p></span> -->
