--- a/resetpass.html
+++ b/resetpass.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>WearPakau</title>
+    <title>Reset pass</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles/style.css" />
@@ -87,7 +87,7 @@
             <label for="password" class="passwordlabel">Confirm password</label>
             <input type="password" name="password" />
           </div>
-          <input type="submit" class="submitbutton" value="Log in" />
+          <input type="submit" class="submitbutton" value="Reset My Password" />
           <!-- <span class="forgotpass"><a href="#">Forgot password?</a></span> -->
           <span class="formwarning">Choose another password</span>
           <!-- <span class="alreadyhaveacc"><p>Already have an account? <a href="">Sign in</a></p></span> -->
