--- a/verifyonesuccess.html
+++ b/verifyonesuccess.html
@@ -77,7 +77,7 @@
     <!-- ************form -->
     <div class="outerformcontainer">
       <div class="formcontainer">
-        <h2 class="formheading">Verification email sent, click to verify</h2>
+        <h2 class="formheading">Verification email sent, Click to verify</h2>
         <form action="" class="loginform">
           <input type="submit" class="submitbutton" value="Verify" />
           <!-- <span class="forgotpass"><a href="#">Forgot password?</a></span>
