--- a/createuser.html
+++ b/createuser.html
@@ -77,7 +77,7 @@
     <!-- ************form -->
     <div class="outerformcontainer">
       <div class="formcontainer">
-        <h2 class="formheading">Join us </h2>
+        <h2 class="formheading">Welcome to Wear Pakau </h2>
         <form action="" class="loginform">
           <div class="inputcontainer">
             <label for="name" class="emaillabel">Your name</label>
@@ -89,7 +89,7 @@
             />
           </div>
           <div class="inputcontainer">
-            <label for="email" class="emaillabel">Your Phone number or email</label>
+            <label for="email" class="emaillabel">Your phone number or email</label>
             <input
               type="email"
               name="email"
@@ -102,12 +102,12 @@
             <input type="password" name="password" />
           </div>
           <div class="inputcontainer">
-            <label for="password" class="passwordlabel">Confirm Password</label>
+            <label for="password" class="passwordlabel">Confirm password</label>
             <input type="password" name="password" />
           </div>
-          <input type="submit" class="submitbutton" value="Log in" />
-          <span class="forgotpass"><a href="#">Forgot password?</a></span>
-          <span class="formwarning">Incorrect Login Details</span>
+          <input type="submit" class="submitbutton" value="Continue" />
+          <!-- <span class="forgotpass"><a href="#">Forgot password?</a></span> -->
+          <span class="formwarning">Incorrect Details</span>
           <span class="alreadyhaveacc"><p>Already have an account? <a href="">Sign in</a></p></span>
         </form>
       </div>
