Seperated Styles for Different components

--- a/resetpass.html
+++ b/resetpass.html
@@ -7,7 +7,9 @@
     <title>Reset pass</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/forms.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
   </head>
   <style>
     .nimish {
