--- a/changepass.html
+++ b/changepass.html
@@ -7,8 +7,10 @@
     <title>Change pass</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles/style.css" />
-  </head>
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/forms.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
+    </head>
   <style>
     .nimish {
       position: absolute;
