Search for mobile added

--- a/createuser.html
+++ b/createuser.html
@@ -75,7 +75,17 @@
 
     <!-- *****placeholder container -->
     <!-- <div class="placeholdercontainer"></div> -->
-
+    <div class="searchcontainermobile">
+      <div class="searchmobile">
+        <input
+          type="text"
+          placeholder="What are you looking for?"
+          name="search"
+          autocomplete="off"
+        />
+        <button><img src="styles/images/searchicon.svg" alt="" /></button>
+      </div>
+    </div>
     <!-- ************form -->
     <div class="outerformcontainer">
       <div class="formcontainer">
