--- a/productdetail.html
+++ b/productdetail.html
@@ -72,7 +72,17 @@
         <li class="navlink"><a href="#">Xyz</a></li>
       </ul>
     </nav>
-
+    <div class="searchcontainermobile">
+      <div class="searchmobile">
+        <input
+          type="text"
+          placeholder="What are you looking for?"
+          name="search"
+          autocomplete="off"
+        />
+        <button><img src="styles/images/searchicon.svg" alt="" /></button>
+      </div>
+    </div>
     <!-- *****placeholder container -->
     <!-- <div class="placeholdercontainer"></div> -->
     <!-- **************PRODUCT DETAIL  -->
