--- a/productlist.html
+++ b/productlist.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles/header.css" />
-    <link rel="stylesheet" href="styles/productdetail.css" />
+    <link rel="stylesheet" href="styles/productlist.css" />
     <link rel="stylesheet" href="styles/footer.css" />
   </head>
   <style>
@@ -83,53 +83,76 @@
         <button><img src="styles/images/searchicon.svg" alt="" /></button>
       </div>
     </div>
+
     <!-- *****placeholder container -->
     <!-- <div class="placeholdercontainer"></div> -->
-    <!-- **************PRODUCT DETAIL  -->
 
-    <div class="productdetailcontainer">
-      <div class="productcarousel">
-        <img src="styles/images/tshirtimage.jpg" alt="" />
+    <!-- ***********productlist -->
+
+    <div class="productlistoutercontainer">
+      <div class="productlistfilter">
+        <div class="listfilter">
+          <span>Sort by price: </span>
+          <select>
+            <option value="Low to High">Low to High</option>
+            <option value="High to Low">High to Low</option>
+          </select>
+        </div>
       </div>
-      <div class="productinfo">
-        <h1>Premium Cotton T-Shirt Vest</h1>
-        <p>T-Shirt</p>
-        <div class="sizes">
-          <span>XS</span>
-          <span>S</span>
-          <span>M</span>
-          <span>L</span>
-        </div>
-        <div class="pricing">
-          <span class="price">RS. 4900</span>
-          <span class="og-price">RS. 10000</span>
-          <span class="discount">(50% OFF)</span>
-        </div>
-        <!-- <div class="extrainfo">
-          <span>100% Original Products</span>
-        </div> -->
-        <span class="qunatitycustombox">
-
-          <div class="quantityselector">
-            <span>Quantity </span>
-            <select>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="3">4</option>
-              <option value="3">5</option>
-            </select>
+      <div class="listcontainer">
+        <div class="innercontainer">
+          <div class="imgcontainer">
+            <img src="styles/images/tshirtimage.jpg" alt="" />
           </div>
-          <button class="customiseproduct">Customise QR</button>
-        </span>
-        <span class="buycart">
-          <button class="buy">BUY NOW</button>
-          <button class="addtocart">ADD TO CART</button>
-        </span>
+          <div class="detailcontainer">
+            <h2 class="productname"> <a class="productname" href="productdetail.html">Premium Cotton T-Shirt Vest</a></h2>
+            <p class="productcategory">Tshirt</p>
+            <div class="pricing">
+              <span class="price">RS. 4900</span>
+              <span class="og-price">RS. 10000</span>
+              <span class="discount">Save (50%)</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="listcontainer">
+        <div class="innercontainer">
+          <div class="imgcontainer">
+            <img src="styles/images/tshirtimage.jpg" alt="" />
+          </div>
+          <div class="detailcontainer">
+            <h2 class="productname"> <a class="productname" href="productdetail.html">Premium Cotton T-Shirt Vest</a></h2>
+            <p class="productcategory">Tshirt</p>
+            <div class="pricing">
+              <span class="price">RS. 4900</span>
+              <span class="og-price">RS. 10000</span>
+              <span class="discount">Save (50%)</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="listcontainer">
+        <div class="innercontainer">
+          <div class="imgcontainer">
+            <img src="styles/images/tshirtimage.jpg" alt="" />
+          </div>
+          <div class="detailcontainer">
+            <h2 class="productname"> <a class="productname" href="productdetail.html">Premium Cotton T-Shirt Vest</a></h2>
+            <p class="productcategory">Tshirt</p>
+            <div class="pricing">
+              <span class="price">RS. 4900</span>
+              <span class="og-price">RS. 10000</span>
+              <span class="discount">Save (50%)</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
-    <!-- **************PRODUCT DETAIL  -->
+    <!-- ***********productlist -->
+
+    <!-- *********footer -->
+
     <footer>
       <div class="footerhead">
         <div class="footerlogocontainer">
