--- a/productlist.html
+++ b/productlist.html
@@ -105,45 +105,75 @@
             <img src="styles/images/tshirtimage.jpg" alt="" />
           </div>
           <div class="detailcontainer">
-            <h2 class="productname"> <a class="productname" href="productdetail.html">Premium Cotton T-Shirt Vest</a></h2>
+            <h2 class="productname">
+              <a class="productname" href="productdetail.html"
+                >Premium Cotton T-Shirt Vest</a
+              >
+            </h2>
             <p class="productcategory">Tshirt</p>
             <div class="pricing">
               <span class="price">RS. 4900</span>
               <span class="og-price">RS. 10000</span>
               <span class="discount">Save (50%)</span>
             </div>
+            <ul class="extrainfo">
+              <li>100% Cotton</li>
+              <li>100% Vibranium</li>
+              <li>Cash on delivery available</li>
+            </ul>
           </div>
         </div>
       </div>
+      <hr class="listhr" />
       <div class="listcontainer">
         <div class="innercontainer">
           <div class="imgcontainer">
             <img src="styles/images/tshirtimage.jpg" alt="" />
           </div>
           <div class="detailcontainer">
-            <h2 class="productname"> <a class="productname" href="productdetail.html">Premium Cotton T-Shirt Vest</a></h2>
+            <h2 class="productname">
+              <a class="productname" href="productdetail.html"
+                >Premium Cotton T-Shirt Vest</a
+              >
+            </h2>
             <p class="productcategory">Tshirt</p>
             <div class="pricing">
               <span class="price">RS. 4900</span>
               <span class="og-price">RS. 10000</span>
               <span class="discount">Save (50%)</span>
             </div>
+            <ul class="extrainfo">
+              <li>100% Cotton</li>
+              <li>100% Vibranium</li>
+              <li>Cash on delivery available</li>
+            </ul>
           </div>
         </div>
       </div>
+      <hr class="listhr" />
+
       <div class="listcontainer">
         <div class="innercontainer">
           <div class="imgcontainer">
             <img src="styles/images/tshirtimage.jpg" alt="" />
           </div>
           <div class="detailcontainer">
-            <h2 class="productname"> <a class="productname" href="productdetail.html">Premium Cotton T-Shirt Vest</a></h2>
+            <h2 class="productname">
+              <a class="productname" href="productdetail.html"
+                >Premium Cotton T-Shirt Vest</a
+              >
+            </h2>
             <p class="productcategory">Tshirt</p>
             <div class="pricing">
               <span class="price">RS. 4900</span>
               <span class="og-price">RS. 10000</span>
               <span class="discount">Save (50%)</span>
             </div>
+            <ul class="extrainfo">
+              <li>100% Cotton</li>
+              <li>100% Vibranium</li>
+              <li>Cash on delivery available</li>
+            </ul>
           </div>
         </div>
       </div>
