--- a/productdetail.html
+++ b/productdetail.html
@@ -125,11 +125,12 @@
           <button class="buy">BUY NOW</button>
           <button class="addtocart">ADD TO CART</button>
         </span>
+        <div class="detailqrbox"></div>
       </div>
     </div>
 
     <!-- ***********************Custom modal -->
-    
+
     <div class="modalcontainer">
       <div class="closemodal">
         <img src="styles/images/closeicon.svg" alt="" />
@@ -199,8 +200,8 @@
         <details>
           <summary>Image Options</summary>
           <div>
-           Choose image
-           <input type="file" id="img" name="img" accept="image/*">
+            Choose image
+            <input type="file" id="img" name="img" accept="image/*" />
           </div>
         </details>
       </div>
