--- a/loader.html
+++ b/loader.html
@@ -12,8 +12,9 @@
  
   </style>
   <body>
-   
+   <div class="loadercontainer">
     <div class="lds-ripple"><div></div><div></div></div>
+   </div>
     <!-- <script src="app.js"></script> -->
   </body>
 </html>
