--- a/createuser.html
+++ b/createuser.html
@@ -119,7 +119,8 @@
           </div>
           <input type="submit" class="submitbutton" value="Continue" />
           <!-- <span class="forgotpass"><a href="#">Forgot password?</a></span> -->
-          <span class="formwarning">Incorrect Details</span>
+          <!-- <span class="formwarning">Incorrect Details</span> -->
+          <span class="privacynotice"><p>By continuing, you agree to Wear Pakau's <a href="">Terms and Condition </a>and<a href=""> Privacy Policy.</a></p></span>
           <span class="alreadyhaveacc"><p>Already have an account? <a href="">Sign in</a></p></span>
         </form>
       </div>
