--- a/shippingaddress.html
+++ b/shippingaddress.html
@@ -110,11 +110,8 @@
           <input class="field__input" type="text" id="address" />
         </label>
         <label class="field">
-          <span class="field__label" for="country">Country</span>
-          <select class="field__input" id="country">
-            <option value=""></option>
-            <option value="unitedstates">United States</option>
-          </select>
+            <span class="field__label" for="landmark">Land mark</span>
+            <input class="field__input" type="text" id="landmark" />
         </label>
         <div class="fields fields--3">
           <label class="field">
@@ -129,6 +126,33 @@
             <span class="field__label" for="state">State</span>
             <select class="field__input" id="state">
               <option value=""></option>
+              <option value="Andhra Pradesh">Andhra Pradesh</option>
+              <option value="Arunachal Pradesh">Arunachal Pradesh</option>
+              <option value="Assam">Assam</option>
+              <option value="Bihar">Bihar</option>
+              <option value="Chhattisgarh">Chhattisgarh</option>
+              <option value="Goa">Goa</option>
+              <option value="Gujarat">Gujarat</option>
+              <option value="Haryana">Haryana</option>
+              <option value="Jharkhand">Jharkhand</option>
+              <option value="Karnataka">Karnataka</option>
+              <option value="Kerala">Kerala</option>
+              <option value="Madhya Pradesh">Madhya Pradesh</option>
+              <option value="Maharashtra">Maharashtra</option>
+              <option value="Manipur">Manipur</option>
+              <option value="Meghalaya">Meghalaya</option>
+              <option value="Mizoram">Mizoram</option>
+              <option value="Nagaland">Nagaland</option>
+              <option value="Odisha">Odisha</option>
+              <option value="Punjab">Punjab</option>
+              <option value="Rajasthan">Rajasthan</option>
+              <option value="Sikkim">Sikkim</option>
+              <option value="Tamil Nadu">Tamil Nadu</option>
+              <option value="Telangana">Telangana</option>
+              <option value="Tripura">Tripura</option>
+              <option value="Uttar Pradesh">Uttar Pradesh</option>
+              <option value="Uttarakhand">Uttarakhand</option>
+              <option value="West Bengal">West Bengal</option>
             </select>
           </label>
         </div>
