Added UTs to Shipping address form

--- a/shippingaddress.html
+++ b/shippingaddress.html
@@ -123,7 +123,7 @@
             <input class="field__input" type="text" id="city" />
           </label>
           <label class="field">
-            <span class="field__label" for="state">State</span>
+            <span class="field__label" for="state">State / UT</span>
             <select class="field__input" id="state">
               <option value=""></option>
               <option value="Andhra Pradesh">Andhra Pradesh</option>
@@ -153,6 +153,14 @@
               <option value="Uttar Pradesh">Uttar Pradesh</option>
               <option value="Uttarakhand">Uttarakhand</option>
               <option value="West Bengal">West Bengal</option>
+              <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
+              <option value="Chandigarh">Chandigarh</option>
+              <option value="Dadra Nagar Haveli and Daman Diu">Dadra Nagar Haveli and Daman Diu</option>
+              <option value="Delhi">Delhi</option>
+              <option value="Jammu and Kashmir">Jammu and Kashmir</option>
+              <option value="Ladakh">Ladakh</option>
+              <option value="Lakshadweep">Lakshadweep</option>
+              <option value="Puducherry">Puducherry</option>
             </select>
           </label>
         </div>
