--- a/productdetail.html
+++ b/productdetail.html
@@ -92,7 +92,7 @@
     <!-- **************PRODUCT DETAIL  -->
 
     <div class="productdetailcontainer">
-      <div class="productcarousel splide">
+      <div class="productcarousel">
         <img src="styles/images/tshirtimage.jpg" alt="">
       </div>
       <div class="productinfo">
@@ -307,11 +307,11 @@
       qrCode.append(document.getElementById("canvas07"));
       // qrCode.download({ name: "qr", extension: "svg" });
   </script>
-  <script>
+  <!-- <script>
     document.addEventListener( 'DOMContentLoaded', function() {
       var splide = new Splide( '.splide' );
       splide.mount();
     } );
-  </script>
+  </script> -->
   </body>
 </html>
