--- a/productlist.html
+++ b/productlist.html
@@ -23,9 +23,7 @@
       left: 0;
       top: 0;
       display: none;
-      /* transform: translateX(-100%); */
       transition: width 2s, height 115s ease-in;
-      /* overflow: hidden; */
     }
     /* *** */
 
@@ -99,6 +97,8 @@
           </select>
         </div>
       </div>
+      <hr class="listhr" />
+
       <div class="listcontainer">
         <div class="innercontainer">
           <div class="imgcontainer">
@@ -124,6 +124,8 @@
           </div>
         </div>
       </div>
+      <hr class="listhr" />
+
       <div class="listcontainer">
         <div class="innercontainer">
           <div class="imgcontainer">
@@ -149,6 +151,8 @@
           </div>
         </div>
       </div>
+      <hr class="listhr" />
+
       <div class="listcontainer">
         <div class="innercontainer">
           <div class="imgcontainer">
@@ -227,6 +231,7 @@
           </div>
         </div>
       </div>
+     
     </div>
 
     <!-- ***********productlist -->
