orderdetails page completed

--- a/orderdetail.html
+++ b/orderdetail.html
@@ -99,6 +99,15 @@
     <!-- ************** order detail-->
     <div class="orderdetailcontainer">
       <h2 class="orderdetailhead">Order Details</h2>
+      <div class="container">
+        <ul class="progressbar">
+          <li class="active">Placed</li>
+          <li>Preparing</li>
+          <li>Dispatched</li>
+          <li>Out For Delivery</li>
+          <li>Delivered</li>
+        </ul>
+      </div>
       <div class="orderdetail">
         <span class="detailcontainer">
           <p class="orderid">Order ID: <span>qwertyuiop</span></p>
@@ -111,6 +120,7 @@
           <p class="status">Status: <span> Delivered</span></p>
           <p class="paymenttype">Payment: <span> Cash on delivery</span></p>
           <p class="paymenttype">Coupon Applied: <span> REHAN</span></p>
+          <button class="cancel">Cancel Order</button>
         </span>
         <div class="billingdetailcontainer">
           <p class="detailhead">Billing Details</p>
