--- a/cartunavailable.html
+++ b/cartunavailable.html
@@ -41,7 +41,7 @@
         <img src="styles/images/MENUBURGER.svg" alt="" />
       </div>
       <div class="logo">
-        <img src="styles/images/amazon_logo.png" alt="" />
+        <img src="styles/images/final logo trans.png" alt="" />
       </div>
       <div class="searchcontainer">
         <input
