--- a/cart.html
+++ b/cart.html
@@ -88,8 +88,9 @@
     <!-- <div class="placeholdercontainer"></div> -->
 
     <!-- **************cart? -->
-
+    <h2 class="carthead">Cart</h2>
     <div class="cartpagecontainer">
+     
       <div class="productcontainer">
         <div class="product">
           <div class="productimgcontainer">
