redirect page updated

--- a/redirect.html
+++ b/redirect.html
@@ -98,8 +98,12 @@
     <!-- Redirect loader-->
     <div class="container">
       <div class="card">
-        <div class="card-front"></div>
-        <div class="card-back"></div>
+        <div class="card-front">
+          <img src="styles/images/final logo trans.png" alt="">
+        </div>
+        <div class="card-back">
+          <img src="styles/images/qrcode.png" alt="">
+        </div>
       </div>
     </div>
 
