--- a/admin.html
+++ b/admin.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/admin.css" />
     <link rel="stylesheet" href="styles/footer.css" />
+    <link rel="shortcut icon" type="image/ico" href="styles/images/favicon.ico"/>
     <script
       type="text/javascript"
       src="https://unpkg.com/qr-code-styling@1.5.0/lib/qr-code-styling.js"
