--- a/admin.html
+++ b/admin.html
@@ -74,9 +74,14 @@
       </div>
 
       <ul class="navlinks">
+        <h3 class="menuheading">Welcome</h3>
         <div class="closebutton">
           <img src="styles/images/closeicon.svg" alt="" />
         </div>
+        <li class="navlink"><a href="#">Xyz</a></li>
+        <li class="navlink"><a href="#">Xyz</a></li>
+        <li class="navlink"><a href="#">Xyz</a></li>
+        <li class="navlink"><a href="#">Xyz</a></li>
         <li class="navlink"><a href="#">Xyz</a></li>
         <li class="navlink"><a href="#">Xyz</a></li>
         <li class="navlink"><a href="#">Xyz</a></li>
