--- a/admin.html
+++ b/admin.html
@@ -52,7 +52,7 @@
         <img src="styles/images/MENUBURGER.svg" alt="" />
       </div>
       <div class="logo">
-        <img src="styles/images/amazon_logo.png" alt="" />
+        <img src="styles/images/navlogo.png" alt="" />
       </div>
       <div class="searchcontainer">
         <input
