Shipping address Updated

--- a/admin.html
+++ b/admin.html
@@ -78,14 +78,12 @@
         <div class="closebutton">
           <img src="styles/images/closeicon.svg" alt="" />
         </div>
-        <li class="navlink"><a href="#">Xyz</a></li>
-        <li class="navlink"><a href="#">Xyz</a></li>
-        <li class="navlink"><a href="#">Xyz</a></li>
-        <li class="navlink"><a href="#">Xyz</a></li>
-        <li class="navlink"><a href="#">Xyz</a></li>
-        <li class="navlink"><a href="#">Xyz</a></li>
-        <li class="navlink"><a href="#">Xyz</a></li>
-        <li class="navlink"><a href="#">Xyz</a></li>
+        <li class="navlink"><a href="#">Profile</a></li>
+        <li class="navlink"><a href="#">Orders</a></li>
+        <li class="navlink"><a href="#">Cart</a></li>
+        <li class="navlink"><a href="#">Settings</a></li>
+        <li class="navlink"><a href="#">Contact Us</a></li>
+        <li class="navlink"><a href="#">Log Out</a></li>
       </ul>
     </nav>
     <div class="searchcontainermobile">
