--- a/shippingaddress.html
+++ b/shippingaddress.html
@@ -237,7 +237,7 @@
       <div class="footerlinkscontainer">
         <div class="footercol1">
           <h3 class="footercoltitle">CUSTOMER SERVICE</h3>
-          <ul class="footercollinklist">
+          <ul class="footercollinklist horizontal">
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Track Order</a></li>
             <li><a href="#">Return Order</a></li>
@@ -246,7 +246,7 @@
         </div>
         <div class="footercol2">
           <h3 class="footercoltitle">COMPANY</h3>
-          <ul class="footercollinklist">
+          <ul class="footercollinklist horizontal">
             <li><a href="#">About Us</a></li>
             <li><a href="#">Terms & Condition</a></li>
             <li><a href="#">Privacy Policy</a></li>
