--- a/userprofile.html
+++ b/userprofile.html
@@ -309,6 +309,9 @@
  
         <!-- <a href="#" class="showallproducts">Show all products</a> -->
       </div>
+      <div class="productlistcontainer svgcontainer">
+        <img src="styles/images/Noactiveproducts.svg" alt="">
+      </div>
       
     </div>
 
