Product detail edit

--- a/productdetail.html
+++ b/productdetail.html
@@ -129,7 +129,11 @@
           <button class="buy">BUY NOW</button>
           <button class="addtocart">ADD TO CART</button>
         </span>
-        <div class="detailqrbox"></div>
+        <span class="detailqrboxcontainer">
+          <p class="detailqrboxheading">Your QR</p>
+          <div class="detailqrbox"></div>
+        </span>
+        
       </div>
     </div>
 
@@ -174,6 +178,8 @@
                 <polyline points="1 1 5 5 9 1"></polyline>
               </symbol>
             </svg>
+            <p class="colorlabel">Select color</p>
+
           </div>
         </details>
         <details>
@@ -199,7 +205,9 @@
                 <polyline points="1 1 5 5 9 1"></polyline>
               </symbol>
             </svg>
+            <p class="colorlabel">Select color</p>
           </div>
+          
         </details>
         <details>
           <summary>Image Options</summary>
@@ -210,6 +218,7 @@
         </details>
       </div>
       <div class="qrboxcontainer">
+        <p class="qrtitle">Your QR</p>
         <div id='canvas07' ></div>
       </div>
       <div class="modalbtncontainer">
