Added classes to shippingaddress

--- a/shippingaddress.html
+++ b/shippingaddress.html
@@ -93,7 +93,7 @@
 
 
 
-      <h1>Shipping Address</h1>
+      <h1 class="shipping-h1">Shipping Address</h1>
      
       <hr class="hr1"/>
       <div class="form">
@@ -140,8 +140,8 @@
     </div>
     <div class="container container2">
 
-        <h2>Want to use another address?</h1>
-          <p>Please enter your shipping details.</p>       
+        <h2 class="shipping-h2">Want to use another address?</h2>
+          <p class="shipping-p">Please enter your shipping details.</p>       
            <hr />
         <div class="form">
           
@@ -215,7 +215,7 @@
           </label>
         </div>
         </div>
-        <hr>
+        <hr class="shipping-hr">
         <button class="button">Continue</button>
       </div>
 
