--- a/landing.html
+++ b/landing.html
@@ -126,7 +126,7 @@
             <a href="#" class="landing-category-ul-li-a"
               ><div class="landing-category-ul-li-a-card">
                 <div class="landing-category-ul-li-a-card-img-container">
-                  <img src="styles/images/categorycreative.webp" alt="" />
+                  <img src="styles/images/Category Tee.png" alt="" />
                 </div>
                 <p class="landing-category-ul-li-a-card-text">Best Sellers</p>
               </div></a
@@ -136,7 +136,7 @@
             <a href="#" class="landing-category-ul-li-a"
               ><div class="landing-category-ul-li-a-card">
                 <div class="landing-category-ul-li-a-card-img-container">
-                  <img src="styles/images/categorycreative.webp" alt="" />
+                  <img src="styles/images/Category Tee black.png" alt="" />
                 </div>
                 <p class="landing-category-ul-li-a-card-text">Best Sellers</p>
               </div></a
@@ -146,72 +146,12 @@
             <a href="#" class="landing-category-ul-li-a"
               ><div class="landing-category-ul-li-a-card">
                 <div class="landing-category-ul-li-a-card-img-container">
-                  <img src="styles/images/categorycreative.webp" alt="" />
+                  <img src="styles/images/Category Tee white.png" alt="" />
                 </div>
                 <p class="landing-category-ul-li-a-card-text">Best Sellers</p>
               </div></a
             >
-          </li>
-          <li class="landing-category-ul-li">
-            <a href="#" class="landing-category-ul-li-a"
-              ><div class="landing-category-ul-li-a-card">
-                <div class="landing-category-ul-li-a-card-img-container">
-                  <img src="styles/images/categorycreative.webp" alt="" />
-                </div>
-                <p class="landing-category-ul-li-a-card-text">Best Sellers</p>
-              </div></a
-            >
-          </li>
-          <li class="landing-category-ul-li">
-            <a href="#" class="landing-category-ul-li-a"
-              ><div class="landing-category-ul-li-a-card">
-                <div class="landing-category-ul-li-a-card-img-container">
-                  <img src="styles/images/categorycreative.webp" alt="" />
-                </div>
-                <p class="landing-category-ul-li-a-card-text">Best Sellers</p>
-              </div></a
-            >
-          </li>
-          <li class="landing-category-ul-li">
-            <a href="#" class="landing-category-ul-li-a"
-              ><div class="landing-category-ul-li-a-card">
-                <div class="landing-category-ul-li-a-card-img-container">
-                  <img src="styles/images/categorycreative.webp" alt="" />
-                </div>
-                <p class="landing-category-ul-li-a-card-text">Best Sellers</p>
-              </div></a
-            >
-          </li>
-          <li class="landing-category-ul-li">
-            <a href="#" class="landing-category-ul-li-a"
-              ><div class="landing-category-ul-li-a-card">
-                <div class="landing-category-ul-li-a-card-img-container">
-                  <img src="styles/images/categorycreative.webp" alt="" />
-                </div>
-                <p class="landing-category-ul-li-a-card-text">Best Sellers</p>
-              </div></a
-            >
-          </li>
-          <li class="landing-category-ul-li">
-            <a href="#" class="landing-category-ul-li-a"
-              ><div class="landing-category-ul-li-a-card">
-                <div class="landing-category-ul-li-a-card-img-container">
-                  <img src="styles/images/categorycreative.webp" alt="" />
-                </div>
-                <p class="landing-category-ul-li-a-card-text">Best Sellers</p>
-              </div></a
-            >
-          </li>
-          <li class="landing-category-ul-li">
-            <a href="#" class="landing-category-ul-li-a"
-              ><div class="landing-category-ul-li-a-card">
-                <div class="landing-category-ul-li-a-card-img-container">
-                  <img src="styles/images/categorycreative.webp" alt="" />
-                </div>
-                <p class="landing-category-ul-li-a-card-text">Best Sellers</p>
-              </div></a
-            >
-          </li>
+          </li>        
         </ul>
       </div>
       <div class="landing-creative-container">
