--- a/userprofile.html
+++ b/userprofile.html
@@ -99,6 +99,7 @@
     <!-- **************user profile -->
 
     <div class="userprofilecontainer">
+      <span id="homelink"><a href="#">Home</a></span>
       <h1 class="userprofilehead">My Profile</h1>
 
       <span class="namecontainer">
